--- a/#src/modules/header/_header.scss
+++ b/#src/modules/header/_header.scss
@@ -1,5 +1,9 @@
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 500;
   font-weight: 600;
+  background: #f8f9fc;
   
   &__wrapper {
     display: flex;
