--- a/#src/scss/base/_base.scss
+++ b/#src/scss/base/_base.scss
@@ -277,7 +277,7 @@ body {
   &__price {
     margin-bottom: 17px;
 
-    span {
+    .small-descr {
       font-weight: 500;
       font-size: 8px;
     }
