--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /* Normalize */
 
 html,
@@ -1323,7 +1325,7 @@ body {
   margin-bottom: 17px;
 }
 
-.product-item__price span {
+.product-item__price .small-descr {
   font-weight: 500;
   font-size: 8px;
 }
@@ -1705,6 +1707,24 @@ body {
   margin-left: 12px;
 }
 
+.catalog {
+  overflow-x: scroll;
+  scrollbar-color: #cccccc #ffffff;
+  /* «цвет ползунка» «цвет полосы скроллбара» */
+  scrollbar-width: thin;
+  /* полоса прокрутки (скроллбар) */
+  /* ползунок скроллбара */
+}
+
+.catalog::-webkit-scrollbar {
+  height: 4px;
+  background-color: #ffffff;
+}
+
+.catalog::-webkit-scrollbar-thumb {
+  background-color: #cccccc;
+}
+
 .catalog__row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1713,6 +1733,8 @@ body {
       flex-wrap: wrap;
   margin-left: -12px;
   margin-right: -12px;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   margin-right: -10px;
   margin-left: -10px;
 }
