--- a/#src/scss/base/_base.scss
+++ b/#src/scss/base/_base.scss
@@ -42,6 +42,12 @@ body {
     &--active {
       border-bottom: 2px solid #e31e24;
     }
+
+
+    @include md-block() {
+      padding: 0 0 14px 0;
+      font-size: 16px;
+    }
   }
 }
 
