--- a/#src/modules/swiper/_swiper.scss
+++ b/#src/modules/swiper/_swiper.scss
@@ -1,16 +1,24 @@
 .main-swiper {
   .swiper-wrapper {
     padding: 20px 0 50px 0;
+
+    @include md-block() {
+      padding-bottom: 25px;
+    }
   }
   
   .swiper-slide {
-    width: 1607px;
-    height: 390px;
+    width: 100%;
+    max-width: 1607px;
+    height: 100%;
+    max-height: 390px;
     transition: $base-transition;
     
     img {
-      width: 1607px;
-      height: 390px;
+      width: inherit;
+    max-width: inherit;
+    height: inherit;
+    max-height: inherit;
       border-radius: 20px;
       box-shadow: 0px 4px 30px rgba(160, 160, 160, 0.25);
       object-fit: cover;
